--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -5,10 +5,10 @@
  <br>
 <div class="row">
     <div class=" justify-content-center text-center">
-        <h1 style="color: darkGray">Welcome to my personal portfolio</h1>
+        <h1 style="color: darkGray">Personal portfolio</h1>
+        <h3 style="color:gray"><i>ezugwuugwu@gmail.com</i></h3>
     </div>
 </div>
-
     <div class="container" style="margin-top: 3rem">
         <div class="row justify-content-center text-center"
              style="border-radius: 128px 0px 0px 0px;
@@ -28,7 +28,7 @@
                             -webkit-filter: brightness(80%) hue-rotate(360deg) saturate(212%);
                             -moz-filter: brightness(80%) hue-rotate(360deg) saturate(212%);"
                                  src="https://media-exp1.licdn.com/dms/image/C4E03AQHjdnXoUHxBqQ/profile-displayphoto-shrink_200_200/0/1621151472187?e=1657152000&v=beta&t=gXnYfm46M0LAwLwd-PtPrvjjyQxhndFXxHkk_a_2XEM" alt="" class="img-responsive" />
-                            <h4 class="mt-5px" style="margin-left: 4rem">Hi, I am Ezugwu Joel<br> <br><b> Software Engineer</b></h4>
+                            <h4 class="mt-5px" style="margin-left: 4rem; color: #307D7E">Hi, I am Ezugwu Joel<br> <br><b> Software Engineer</b></h4>
                             <br>
                         </div>
                     </div>
@@ -43,27 +43,60 @@
                   <div class="card card-body" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
-                      <h5>My Experience as a Software Engineer</h5>
+                      <div style="display: flex; margin: 10px;">
+                          <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                               src="https://icon-library.com/images/skill-icon/skill-icon-6.jpg" alt="">
+                          <h5 style="color: #C7A317; font-size: bold">My Experience as a Software Engineer</h5>
+                      </div>
                       <br>
-                      <p>Junior Software Engineer at Semicolon Africa</p>
-                      <p>Designed, built the backend side of a Diary Application. The System allows one input information without pen and paper.
-                        Also, i built a mini ecommerce website(With python) and an Employee management System, using Spring boot
-                      </p>
+                      <ul>
+                          <li>
+                              <p style="color: #307D7E">
+                                  <b>Junior Software Engineer at Semicolon Africa.</b>
+                              </p>
+                          </li>
+
+                          <li><p style="margin-bottom: 0; color: #307D7E">
+                              <b>Designed, built and tested with Spring boot, the backend side of a Diary Application:</b>
+                          </p>
+                              <p>A system that allows a diary user to register
+                              entries in form of messages and have them stored in the database.</p>
+                          </li>
+
+                          <li><p style="margin-bottom: 0; color: #307D7E"><b>Designed, built with Django a mini Ecommerce webpage:</b></p>
+                              <p>A page that allows the admin to create article, specifying its title, the price,
+                              the description and image of the product. The admin can also update the price and other details on each product.</p>
+                          </li>
+                      </ul>
+                      <div style="display: flex; margin: 0rem 2rem">
+                          <p style="margin-right: 3px; color: #C7A317;"><b>Want to see more projects?</b></p>
+                          <a href="https://github.com/Ezugwuugwu"><p><b>See Git</b></p></a>
+                      </div>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="card card-body h-100" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
-                      <h5>What I Know</h5>
-                      <br>
-                      <p>Java, Springboot, HTML/CSS, JavaScript, React, MongoDB, MySQL and
-                         a bunch more I can't possibly mention in one sentence! ;)</p>
+                      <div style="display: flex; margin: 10px;">
+                          <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                               src="http://cdn.onlinewebfonts.com/svg/img_398604.png" alt="">
+                          <h5 style="color: #C7A317; font-size: bold">What I Know(My Skills)</h5>
+                      </div><br>
+                      <ul>
+                          <li>Java</li>
+                          <li>Spring boot</li>
+                          <li>JavaScript</li>
+                          <li>React</li>
+                          <li>HTML/CSS</li>
+                          <li>Git</li>
+                          <li>MongoDb</li>
+                          <li>MySQL</li>
+                      </ul>
                   </div>
               </div>
           </div>
-        <br>
-        <br>
+        <br><br>
 
 
         <div class="row">
@@ -71,44 +104,49 @@
                 <div class="card card-body h-100" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
-                    <h5>How I Learn</h5>
-                    <br>
-                    <p>Reverse Engineer & Build Ugly Prototypes First.</p>
-                    <p>I can learn just about anything by doing it over and over again. Getting materials that
-                    can help me learn the technology faster. Documentation is key!!!!</p>
+                    <div style="display: flex; margin: 10px">
+                        <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                               src="https://i.pinimg.com/736x/5e/84/23/5e8423f588107e2b1b08cc0597c80cc3--free-icon-computers.jpg" alt="">
+                        <h5 style="color: #C7A317; font-size: bold">How I Learn</h5>
+                    </div><br>
+                    <p>My first approach towards learning any new technology is to read the manual(Documentation).<br> I learn more
+                    by practicing it over and over again until I can use the new technology to design and build a real or prototype
+                    problem-solving application</p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="card card-body h-100" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
-                    <h5>My Short Term Goals</h5>
-                    <br>
-                    <p>After almost two years of doing only JAVA I'm ready to learn something new. I would be picking up more technologies.</p>
-                    <p>Aside from building small projects I would love to enter a position where I can be a part of a bigger team
-                       and learn more from others with more experience than myself...</p>
+                    <div style="display: flex; margin: 10px">
+                        <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                             src="https://media.istockphoto.com/vectors/short-term-goals-vector-icon-vector-id1221522100?k=20&m=1221522100&s=170667a&w=0&h=6XxUUrdgFpGsgqf7NtAFacehkOMvHEnWNcMq402Ku7g=" alt="">
+                        <h5 style="color: #C7A317; font-size: bold">My short term goals</h5>
+                    </div><br>
+                    <p>To grow every day, at least to a mid-level engineer</p>
+
                 </div>
             </div>
         </div>
         <br><br>
-         <div class="row justify-content-center" style=" justify-content:center; width: 50%">
+
+         <div style="width: 50%; display: table; margin: auto">
                 <div class="card card-body h-100" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
-                -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
-                    <h5 style="color: red">My CV</h5>
+                -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1); border: 2px solid #ff6550;
+                background: #000000; text-align: center; width: 85%">
+                    <h5 style="color: white">My CV</h5>
                     <br>
                     <a href="https://docs.google.com/document/d/1waY-mK7qWg2_Cqeb5DSQTI8i5XRUcMz-sGA8j4BNzKk/edit">
-                        <button style="width: 70%; background-color: green; color: white; font-size: bold; border: none; border-radius: 10px ">
+                        <button style="width: 8rem; height: 3rem; background-color: green; color: white; font-size: bold; border: none; border-radius: 10px ">
                             View my CV</button>
                     </a>
-
                 </div>
-            </div>
-        <br>
-        <br>
+         </div>
+        <br><br>
         <div class="row justify-content-center text-center">
             <div>
-                <h6>View me on:</h6>
+                <h3 style="color: #C7A317; font-size:bold">View me on:</h3>
             </div>
             <div class="d-flex justify-content-center text-center" style="margin-right: 3px">
                 <div style="margin-right:12px">
@@ -116,6 +154,14 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                         </svg>
+                    </a>
+                </div>
+
+                <div style="margin-right:12px">
+                    <a href="https://twitter.com/DeNewtonjoel91">
+                       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+                       </svg>
                     </a>
                 </div>
 
