--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -137,7 +137,7 @@
                 background: #000000; text-align: center; width: 85%">
                     <h5 style="color: white">My CV</h5>
                     <br>
-                    <a href="https://docs.google.com/document/d/1waY-mK7qWg2_Cqeb5DSQTI8i5XRUcMz-sGA8j4BNzKk/edit">
+                    <a href="https://docs.google.com/document/d/1LEGfZl3s80SMPn42jd-fUXDV2UoxiFwNHhjyMfeELK8/edit#">
                         <button style="width: 8rem; height: 3rem; background-color: green; color: white; font-size: bold; border: none; border-radius: 10px ">
                             View my CV</button>
                     </a>
