--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -28,7 +28,7 @@
                             -webkit-filter: brightness(80%) hue-rotate(360deg) saturate(212%);
                             -moz-filter: brightness(80%) hue-rotate(360deg) saturate(212%);"
                                  src="https://media-exp1.licdn.com/dms/image/C4E03AQHjdnXoUHxBqQ/profile-displayphoto-shrink_200_200/0/1621151472187?e=1657152000&v=beta&t=gXnYfm46M0LAwLwd-PtPrvjjyQxhndFXxHkk_a_2XEM" alt="" class="img-responsive" />
-                            <h4 class="mt-5px" style="margin-left: 4rem; color: #307D7E">Hi, I am Ezugwu Joel<br> <br><b> Software Engineer</b></h4>
+                            <h4 class="mt-5px" style="margin-left: 4rem; color: #307D7E">Hi, I am Ezugwu Joel<br> <br><b> Junior Software Engineer</b></h4>
                             <br>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                       <ul>
                           <li>
                               <p style="color: #307D7E">
-                                  <b>Junior Software Engineer at Semicolon Africa.</b>
+                                  <b>Junior Software Engineer at Quabbly Technologies.</b>
                               </p>
                           </li>
 
