--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -52,8 +52,11 @@
                       <ul>
                           <li>
                               <p style="color: #307D7E">
-                                  <b>Junior Software Engineer at Quabbly Technologies.</b>
+                                  <b>Software Engineering intern at <a href="https://www.linkedin.com/company/quabbly/mycompany/verification/" style="color:Blue; font-family: bold">Quabbly Technologies.</a> </b>
                               </p>
+                          </li>
+                            <li>
+                              <p style="color: #307D7E"><b>Software Engineer at <a href="https://www.linkedin.com/company/semicolonafrica/mycompany/">Semicolon Africa.</a> </b></p>
                           </li>
 
                           <li><p style="margin-bottom: 0; color: #307D7E">
@@ -83,22 +86,36 @@
                                src="http://cdn.onlinewebfonts.com/svg/img_398604.png" alt="">
                           <h5 style="color: #C7A317; font-size: bold">What I Know(My Skills)</h5>
                       </div><br>
-                      <ul>
-                          <li>Java</li>
-                          <li>Spring boot</li>
-                          <li>JavaScript</li>
-                          <li>React</li>
-                          <li>HTML/CSS</li>
-                          <li>Python</li>
-                          <li>Django</li>
-                          <li>Git</li>
-                          <li>MongoDb</li>
-                          <li>MySQL</li>
-                      </ul>
+                      <div style="display: flex; justify-content: space-between">
+                          <div>
+                              <ul>
+                                  <li>Java</li>
+                                  <li>Spring boot</li>
+                                  <li>JavaScript</li>
+                                  <li>React</li>
+                                  <li>HTML/CSS</li>
+                                  <li>Python</li>
+                                  <li>Django</li>
+                              </ul>
+                          </div>
+                          <di>
+                              <ul>
+                                  <li>API Development</li>
+                                  <li>Web Development</li>
+                                  <li>Maven and Gradle</li>
+                                  <li>Mockito</li>
+                                  <li>Unit Testing</li>
+                                  <li>Git</li>
+                                  <li>MongoDb</li>
+                                  <li>MySQL</li>
+                              </ul>
+                          </di>
+                      </div>
                   </div>
               </div>
           </div>
-        <br><br>
+        <br>
+        <br>
 
 
         <div class="row">
@@ -125,7 +142,7 @@
                              src="https://media.istockphoto.com/vectors/short-term-goals-vector-icon-vector-id1221522100?k=20&m=1221522100&s=170667a&w=0&h=6XxUUrdgFpGsgqf7NtAFacehkOMvHEnWNcMq402Ku7g=" alt="">
                         <h5 style="color: #C7A317; font-size: bold">My short term goals</h5>
                     </div><br>
-                    <p>To grow every day, at least to a mid-level engineer</p>
+                    <p>Short term goal is to accomplish many more real-life problem-solving projects and lay hands on some other languages and technologies like Go, Android etc.</p>
 
                 </div>
             </div>
