--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -1,6 +1,28 @@
 {% extends "base_file.html" %}
 
 {% block page_content %}
+<style>
+
+#image {
+  position: relative;
+  left: 0px;
+  top: 0px;
+  animation: slidein 1s ease-in-out;
+}
+
+@keyframes slidein {
+from {background-color: red;}
+  to {background-color: yellow;}
+  0% {
+    top: -1900px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+
+
+</style>
 
  <br>
 <div class="row">
@@ -9,17 +31,17 @@
         <h3 style="color:gray"><i>ezugwuugwu@gmail.com</i></h3>
     </div>
 </div>
-    <div class="container" style="margin-top: 3rem">
+    <div class="container" style="margin-top: 3rem" >
         <div class="row justify-content-center text-center"
              style="border-radius: 128px 0px 0px 0px;
              -webkit-border-radius: 128px 0px 0px 0px;
              -moz-border-radius: 128px 0px 0px 0px;
              background: #ffffff;
-             border: 5px solid #5a50ff;">
+             border: 5px solid #5a50ff; background-image: url(https://i.pinimg.com/736x/2a/c5/8c/2ac58ca3c5e1d553148f12ba1d7a38e8.jpg)" >
             <div class="col-md-9">
                 <div class="card-body h-100 border-info d-flex">
                     <div class="row text-center">
-                        <div class="col-sm-6" style="display: flex; margin: 5px">
+                        <div class="col-sm-6" style="display: flex; margin: 5px;">
                             <img style="width: 10rem; height: 100%; border-radius: 37px 37px 37px 37px;
                             -webkit-border-radius: 37px 37px 37px 37px;
                             -moz-border-radius: 37px 37px 37px 37px;
@@ -27,7 +49,7 @@
                             filter: brightness(80%) hue-rotate(360deg) saturate(212%);
                             -webkit-filter: brightness(80%) hue-rotate(360deg) saturate(212%);
                             -moz-filter: brightness(80%) hue-rotate(360deg) saturate(212%);"
-                                 src="https://media-exp1.licdn.com/dms/image/C4E03AQHjdnXoUHxBqQ/profile-displayphoto-shrink_200_200/0/1621151472187?e=1657152000&v=beta&t=gXnYfm46M0LAwLwd-PtPrvjjyQxhndFXxHkk_a_2XEM" alt="" class="img-responsive" />
+                                 src="https://media-exp1.licdn.com/dms/image/C4E03AQHjdnXoUHxBqQ/profile-displayphoto-shrink_200_200/0/1621151472187?e=1657152000&v=beta&t=gXnYfm46M0LAwLwd-PtPrvjjyQxhndFXxHkk_a_2XEM" alt="" class="img-responsive" id="image" />
                             <h4 class="mt-5px" style="margin-left: 4rem; color: #307D7E">Hi, I am Ezugwu Joel<br> <br><b> Junior Software Engineer</b></h4>
                             <br>
                         </div>
@@ -44,9 +66,9 @@
                   -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
                       <div style="display: flex; margin: 10px;">
-                          <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                          <img style="width: 60px; height: 60px; margin-right: 6px; border-radius: 100% "
                                src="https://icon-library.com/images/skill-icon/skill-icon-6.jpg" alt="">
-                          <h5 style="color: #C7A317; font-size: bold">My Experience as a Software Engineer</h5>
+                          <h5 style="color: #C7A317; font-size: bold; height: 4rem; width: 100%; background-color: black; border-radius: 10px">My Experience as a Software Engineer</h5>
                       </div>
                       <br>
                       <ul>
@@ -82,9 +104,9 @@
                   -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
                       <div style="display: flex; margin: 10px;">
-                          <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                          <img style="width: 60px; height: 60px; margin-right: 6px; border-radius: 100% "
                                src="http://cdn.onlinewebfonts.com/svg/img_398604.png" alt="">
-                          <h5 style="color: #C7A317; font-size: bold">What I Know(My Skills)</h5>
+                          <h5 style="color: #C7A317; font-size: bold; height: 4rem; width: 100%; background-color: black; border-radius: 10px">What I Know(My Skills)</h5>
                       </div><br>
                       <div style="display: flex; justify-content: space-between">
                           <div>
@@ -124,9 +146,9 @@
                 -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
                     <div style="display: flex; margin: 10px">
-                        <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                        <img style="width: 60px; height: 60px; margin-right: 6px; border-radius: 100% "
                                src="https://i.pinimg.com/736x/5e/84/23/5e8423f588107e2b1b08cc0597c80cc3--free-icon-computers.jpg" alt="">
-                        <h5 style="color: #C7A317; font-size: bold">How I Learn</h5>
+                        <h5 style="color: #C7A317; font-size: bold; height: 4rem; width: 100%; background-color: black; border-radius: 10px">How I Learn</h5>
                     </div><br>
                     <p>My first approach towards learning any new technology is to read the manual(Documentation).<br> I learn more
                     by practicing it over and over again until I can use the new technology to design and build a real or prototype
@@ -138,9 +160,9 @@
                 -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                 -moz-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);">
                     <div style="display: flex; margin: 10px">
-                        <img style="width: 30px; height: 30px; margin-right: 6px; border-radius: 100% "
+                        <img style="width: 60px; height: 60px; margin-right: 6px; border-radius: 100% "
                              src="https://media.istockphoto.com/vectors/short-term-goals-vector-icon-vector-id1221522100?k=20&m=1221522100&s=170667a&w=0&h=6XxUUrdgFpGsgqf7NtAFacehkOMvHEnWNcMq402Ku7g=" alt="">
-                        <h5 style="color: #C7A317; font-size: bold">My short term goals</h5>
+                        <h5 style="color: #C7A317; font-size: bold; height: 4rem; width: 100%; background-color: black; border-radius: 10px">My short term goals</h5>
                     </div><br>
                     <p>Short term goal is to accomplish many more real-life problem-solving projects and lay hands on some other languages and technologies like Go, Android etc.</p>
 
