--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -20,8 +20,6 @@ from {background-color: red;}
     top: 0px;
   }
 }
-
-
 </style>
 
  <br>
@@ -60,7 +58,7 @@ from {background-color: red;}
     <br>
 
 
-          <div class="row">
+          <div class="row" style="background-color: #778899; width: 100%">
               <div class="col-md-6">
                   <div class="card card-body" style="box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
                   -webkit-box-shadow: -2px 2px 8px 2px rgba(36,31,31,1);
@@ -108,6 +106,7 @@ from {background-color: red;}
                                src="http://cdn.onlinewebfonts.com/svg/img_398604.png" alt="">
                           <h5 style="color: #C7A317; font-size: bold; height: 4rem; width: 100%; background-color: black; border-radius: 10px">What I Know(My Skills)</h5>
                       </div><br>
+
                       <div style="display: flex; justify-content: space-between">
                           <div>
                               <ul>
@@ -138,6 +137,40 @@ from {background-color: red;}
           </div>
         <br>
         <br>
+
+
+
+
+         <div class="row">
+             <div class="col-md-9; card card-body h-100" style="width: 100%">
+                 <h1 style="display: table; margin: auto">Capabilities</h1><br>
+                 <div style="display: table; margin: auto;">
+
+                         <div style="display: flex; justify-content: space-between;">
+                             <div style="margin: 2rem; display: inline; text-align: center;">
+                                 <img style="height: 70px; width: 70px; "src="https://media.istockphoto.com/vectors/web-developmentbackend-and-frontend-developer-vector-id1155481175?k=20&m=1155481175&s=612x612&w=0&h=8VYWtF6jehpTp3q37J4mkgcs5cuShxkvq8h2-GdsaHA=" alt="">
+                                 <h4 style="text-align: center" ><b>Front-End Development</b></h4>
+                                 <p style="text-align: center">Animation</p>
+                                 <p style="text-align: center">Web Application</p>
+                                 <p style="text-align: center">Responsive and Mobile Application</p>
+                             </div>
+                             <br>
+
+                             <div style="margin: 2rem; display: inline; text-align: center;">
+                                 <img style="height: 70px; width: 70px; border-radius: 10%" src="http://d1vqbpto5tbbz0.cloudfront.net/blog/wp-content/uploads/2016/01/06172857/Backendimage-process.png" alt="">
+                                 <h4 style="text-align: center"><b>Back-End Development</b></h4>
+                                 <p style="text-align: center">API</p>
+                                 <p style="text-align: center">Database</p>
+                                 <p style="text-align: center">Application logic</p>
+                             </div>
+                         </div>
+
+                 </div>
+             </div>
+         </div>
+        <br>
+        <hr>
+
 
 
         <div class="row">
