--- a/my_portfolio/Templates/portfolio_page.html
+++ b/my_portfolio/Templates/portfolio_page.html
@@ -142,11 +142,11 @@ from {background-color: red;}
 
 
          <div class="row">
-             <div class="col-md-9; card card-body h-100" style="width: 100%">
+             <div class="col-md-9; " style="width: 100%">
                  <h1 style="display: table; margin: auto">Capabilities</h1><br>
                  <div style="display: table; margin: auto;">
 
-                         <div style="display: flex; justify-content: space-between;">
+                         <div style="display: flex; justify-content: space-around">
                              <div style="margin: 2rem; display: inline; text-align: center;">
                                  <img style="height: 70px; width: 70px; "src="https://media.istockphoto.com/vectors/web-developmentbackend-and-frontend-developer-vector-id1155481175?k=20&m=1155481175&s=612x612&w=0&h=8VYWtF6jehpTp3q37J4mkgcs5cuShxkvq8h2-GdsaHA=" alt="">
                                  <h4 style="text-align: center" ><b>Front-End Development</b></h4>
